--- a/manifests/traefik-v2/values.yaml
+++ b/manifests/traefik-v2/values.yaml
@@ -9,7 +9,7 @@ traefik:
     #- --providers.file.filename=/data/traefik-config.yaml
     - --entrypoints.websecure.http.tls.certresolver=cloudflare
     - --entrypoints.websecure.http.tls.domains[0].main=lcisp.it
-    - --entrypoints.websecure.http.tls.domains[0].sans=*.home.lcisp.it
+    - --entrypoints.websecure.http.tls.domains[0].sans=*.pref.lcisp.it
     - --certificatesresolvers.cloudflare.acme.dnschallenge.provider=cloudflare
     - --certificatesresolvers.cloudflare.acme.email=calcaterra.luca@gmail.com
     #- --certificatesresolvers.cloudflare.acme.dnschallenge.resolvers=1.1.1.1
